tdf#119720 KDE5: Don't show hidden windows on modality change

This change fixes clipping and drawing issues
for document recovery window and other modal windows.

Change-Id: I005254d4cd2598f4f2d02ba7e7bbf7388affe36c
Reviewed-on: https://gerrit.libreoffice.org/68307
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>